--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,17 @@
   font-family: sans-serif;
   text-align: center;
 }
+
+/* For Added Name Input */
+input {
+  padding: 5px;
+  font-size: 16px;
+  border-radius: 3px;
+}
+
+input[tupe='text'] {
+  width: 200px;
+}
 .name-tag {
   background-color: red;
   padding: 10px 0 20px;
@@ -25,4 +36,17 @@
   font-size: 60px;
   height: 90px;
   font-family: "Permanent Marker", Arial, Helvetica, sans-serif;
+}
+
+.name-tag_delete {
+  position: absolute; 
+  padding: 5px 8px;
+  top: 5px;
+  right: 5px;
+  cursor: pointer;
+}
+
+.name-tag_delete:hover {
+  background-color: rgba(0, 0, 0, 0, 0.2);
+  border-radius: 50%;
 }
