--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
   text-align: center;
 }
 
-/* For Added Name Input */
+/* Added for Name Input box */
 input {
   padding: 5px;
   font-size: 16px;
